assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');


.navbar {
  color: darkblue;
  font-family: "Architects Daughter", sans-serif;
}

body {
  background-image: url("../images/white-paint.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #cccccc;
  background-position: center;
}

.main-text {
  padding-top: 50px;
  padding-left: 150px;
  font-size: 50pt;
  font-family: "Architects Daughter", sans-serif;
  padding-bottom: 70px;
  color: darkblue;
}

.about-container {
  border: solid 1px black;
  border-radius: 3px;
}

.colour-pick-text {
  text-align: center;
  padding-top: 50px;
}

.main-image-container {
  padding-top: 0;
  width: 75%;
  height: 60vw;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.colour-dropbox {
  width: 25%;
  margin: 0 auto;
}

.form-container {
  width: 75%;
  margin: 0 auto;
  margin-bottom: 50px;
}

#email-form {
  padding: 20px;
}

/*---------------------------------------------------- Icons */

i {
  font-size: 40pt;
  padding-top: 10px;
  padding-bottom: 10px;
  color: rebeccapurple;
}


/*---------------------------------------------------- Colours */

.azure-blue {
  filter: hue-rotate(180deg);
}

.passion-purple {
  filter: hue-rotate(280deg);
}

.blaze-red {
  filter: hue-rotate(0deg);
}

.jewel-green {
  filter: hue-rotate(120deg);
}

.vivid-pink {
  filter: hue-rotate(320deg);
}

.sunburnt-orange {
  filter: hue-rotate(20deg);
}

.calming-teal {
  filter: hue-rotate(150deg);
}

/* -------------------------------------------------- footer */



@import url(https://fonts.googleapis.com/css?family=Raleway);

/* Colors */


* {
  margin: 0;
  padding: 0;
  /*@include box-sizing(border-box); */
}



footer {
  width: 100%;
  display: inline-block;
  margin-top: 2em 0;
  height: 70px;
  background-color: #696969;
}
.copyright {
    width: 50%;
    float: left;
    /*@media (max-width: 600px) {
      width: 100%; 
    }*/
}

footer p {
      padding-left: 10%;
      color: white;
      font-size: 0.7em;
      line-height: 70px;
      text-transform: capitalize;
      letter-spacing: 1px;
      margin-bottom: 0;
      /*@media (max-width: 600px) {
        text-align: center;
        padding: 0; } */
}

.social {
      width: 50%;
      float: right;
   /* @media (max-width: 600px) {
      width: 100%;
  } */
}
.social a {
      float: left;
      line-height: 70px;
      text-decoration: none;
      color: white;
      text-align: center;
      font-weight: bold; 
      /*@include transition(all, 0.3s);
       &:hover {
         background-color: #222;
         @include transition(all, .3s);
       } */
}


.linked {
  background-color: blue;
  font-size: inherit;
  width: 20%;
}

.face {
  background-color: lightblue;
  font-size: inherit;
  width: 20%;
}

.tweet {
  background-color: blueviolet;
  font-size: inherit;
  width: 20%;
  
}

.support {
  background-color: green;
  font-size: 0.8em;
  width: 40%;
}

